[package]
name = "distrust"
version = "0.1.0"
authors = ["kkloberdanz <kyle.g.kloberdanz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
actix-files = "0.1.4"
actix-multipart = "0.1.1"

env_logger = "0.6"
futures = "0.1.25"
